--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,600;0,700;0,800;1,600;1,700;1,800&family=Playfair+Display:ital@0;1&family=Prata&family=Roboto:ital,wght@0,300;0,500;0,700;0,900;1,500&display=swap"
           rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>Artificial Intelligence</title>
 </head>
 <body>
 <div id="root"></div>
